<resources>
    <string name="app_name">Chat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_sign_in">Sign in</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="enter_password">Enter Password (at least 6 characters)</string>
    <string name="enter_confirm_password">Confirm Password (at least 6 characters)</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>