<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="kotlinpl.fbchat.chat.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:textStyle="bold"
        android:padding="12dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gilroy_bold"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_name"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_email"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginStart="15dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"

        android:textColor="@color/colorBlack"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_password"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginStart="15dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"

        android:textColor="@color/colorBlack"
        android:background="@color/colorTextBackground"
        android:padding="12dp"
        android:hint="@string/enter_confirm_password"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorTextBackground"
            android:layout_marginEnd="2dp"
            android:textColor="@color/colorAccent"
            android:text="@string/label_sign_up"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/colorTextBackground"
            android:backgroundTint="#7A4A4A"
            android:backgroundTintMode="screen"
            android:foregroundTint="#9A6767"
            android:text="@string/btn_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent"
            android:textColorLink="#000000"
            android:theme="@style/Button.Black"
            android:visibility="visible"
            app:iconTint="#9A9A9A" />

    </LinearLayout>



</LinearLayout>